[improve][client] PIP-421: Require Java 17 as minimum for Pulsar Java client SDK
This change implements PIP-421 by upgrading the minimum Java version
requirement for all Pulsar Java client SDK components from Java 8 to Java 17.

Changes include:
- Updated pulsar.client.compiler.release property from 8 to 17
- Updated modernizer plugin configurations in all client modules
- Fixed Java 17 modernizer violations (URLEncoder, Collection factories)
- Updated README.md documentation to reflect Java 17 requirement
- Added PIP-421 documentation

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>